// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

.emotion-1 {
  margin-bottom: 16px;
  counter-increment: item-counter;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  display: inline-block;
  min-width: 24px;
}

.emotion-1::before svg {
  fill: #2E2E2E;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      first node
    </li>
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OrderedList renders with invalid nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

.emotion-1 {
  margin-bottom: 16px;
  counter-increment: item-counter;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1 svg {
  fill: #2E2E2E;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
  display: inline-block;
  min-width: 24px;
}

.emotion-1::before svg {
  fill: #2E2E2E;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OrderedList renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

.emotion-1 {
  margin-bottom: 4px;
  counter-increment: item-counter;
  color: #EF1703;
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4590277777777778em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4590277777777778em;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #3358CC;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: -0.5px;
  display: inline-block;
  min-width: 12px;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      first node
    </li>
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;
